--- a/playbooks/renew_vpn_certificate/tasks/main.yaml
+++ b/playbooks/renew_vpn_certificate/tasks/main.yaml
@@ -75,7 +75,7 @@
 
     - name: Restart openvpn client (RHEL 6)
       service: name=openvpn state=restarted
-      when: (ansible_distribution == "RedHat" and ansible_distribution_major_version < "7")
+      when: (ansible_distribution == "RedHat" and ansible_distribution_major_version < "7") or
             (ansible_distribution == "CentOS" and ansible_distribution_major_version < "7")
 
     - name: Remove the /tmp/certificates directory
