--- a/playbooks/vpn_clients/tasks/main.yaml
+++ b/playbooks/vpn_clients/tasks/main.yaml
@@ -8,5 +8,5 @@
 
     - name: Restart openvpn client (RHEL 6)
       service: name=openvpn state=restarted
-      when: (ansible_distribution == "RedHat" and ansible_distribution_major_version < "7")
+      when: (ansible_distribution == "RedHat" and ansible_distribution_major_version < "7") or
             (ansible_distribution == "CentOS" and ansible_distribution_major_version < "7")
