--- a/playbooks/renew_vpn_certificate/tasks/main.yaml
+++ b/playbooks/renew_vpn_certificate/tasks/main.yaml
@@ -39,6 +39,7 @@
 
     - name: Clone the certificates repository locally under /tmp/certificates
       git: clone=yes dest=/tmp/certificates repo="ssh://root@vpn.puppetmaster01.gnome.org/git/certificates"
+      run_once: true
       delegate_to: 127.0.0.1
 
     - name: Copy the certificates from the OpenVPN server to the local certificates repository clone (.crt)
