--- a/roles/gitlab-runner/defaults/main.yml
+++ b/roles/gitlab-runner/defaults/main.yml
@@ -1,16 +1,9 @@
-gitlab_runner_root_ssh_keys:
-    - av.pub
-    - bpiotrowski.pub
-    - jjardon.pub
-
-gitlab_runner_docker_cleanup_env:
-    LOW_FREE_SPACE: "10G"
-    EXPECTED_FREE_SPACE: "20G"
-    LOW_FREE_FILES_COUNT: "1048576"
-    EXPECTED_FREE_FILES_COUNT: "2097152"
-    USE_DF: "1"
+gitlab_runner_gc_period: "weekly"
+gitlab_runner_gc_env:
+    MINIMUM_IMAGES_TO_SAVE: 10
+    REMOVE_VOLUMES: 1
+    FORCE_IMAGE_REMOVAL: 1
 
 gitlab_runner_concurrent: 8
 gitlab_runner_check_interval: 0
 gitlab_runner_session_timeout: 1800
-
