--- a/roles/gitlab-runner/tasks/ubuntu.yml
+++ b/roles/gitlab-runner/tasks/ubuntu.yml
@@ -1,4 +1,8 @@
 ---
+- name: install helper packages for ansible
+  apt:
+    name: [python-apt, python3-apt, aptitude]
+
 - name: add packagecloud gpg key to apt keyring
   apt_key:
     url: https://packages.gitlab.com/runner/gitlab-runner/gpgkey
