--- a/playbooks/gitlab-runners-upgrade.yml
+++ b/playbooks/gitlab-runners-upgrade.yml
@@ -10,34 +10,33 @@
       shell: docker ps -q | wc -l
       register: docker_containers
 
-    - name: exit if any containers are running
-      fail:
+    - name: upgrade
+      block:
+        - name: pause runners hosted on {{ inventory_hostname }}
+          local_action: command ../misc/gitlab-runnerctl -t {{ gitlab_token }} stop {{ inventory_hostname }}
+
+        - name: install updates
+          apt: upgrade=safe update_cache=yes cache_valid_time=3600
+          when: ansible_os_family == 'Debian'
+          register: installed_updates
+
+        - name: install updates
+          yum:
+            name: '*'
+            state: latest
+          when: ansible_os_family == 'RedHat'
+          register: installed_updates
+
+        - name: ensure runners are paused
+          local_action: command ../misc/gitlab-runnerctl -t {{ gitlab_token }} is-paused {{ inventory_hostname }}
+
+        - name: reboot {{ inventory_hostname }}
+          reboot:
+          when: installed_updates.changed
+
+        - name: start runners hosted on {{ inventory_hostname }}
+          local_action: command ../misc/gitlab-runnerctl -t {{ gitlab_token }} start {{ inventory_hostname }}
+
+        - name: ensure runners are running
+          local_action: command ../misc/gitlab-runnerctl -t {{ gitlab_token }} is-active {{ inventory_hostname }}
       when: docker_containers.stdout != "0"
-
-    - name: pause runners hosted on {{ inventory_hostname }}
-      local_action: command ../misc/gitlab-runnerctl -t {{ gitlab_token }} stop {{ inventory_hostname }}
-
-    - name: install updates
-      apt: upgrade=safe update_cache=yes cache_valid_time=3600
-      when: ansible_os_family == 'Debian'
-      register: installed_updates
-
-    - name: install updates
-      yum:
-        name: '*'
-        state: latest
-      when: ansible_os_family == 'RedHat'
-      register: installed_updates
-
-    - name: ensure runners are paused
-      local_action: command ../misc/gitlab-runnerctl -t {{ gitlab_token }} is-paused {{ inventory_hostname }}
-
-    - name: reboot {{ inventory_hostname }}
-      reboot:
-      when: installed_updates.changed
-
-    - name: start runners hosted on {{ inventory_hostname }}
-      local_action: command ../misc/gitlab-runnerctl -t {{ gitlab_token }} start {{ inventory_hostname }}
-
-    - name: ensure runners are running
-      local_action: command ../misc/gitlab-runnerctl -t {{ gitlab_token }} is-active {{ inventory_hostname }}
