gitlab-runner: restart docker-gc timer if changed

--- a/roles/gitlab-runner/handlers/main.yml
+++ b/roles/gitlab-runner/handlers/main.yml
@@ -4,3 +4,6 @@
 
 - name: daemon reload
   systemd: daemon_reload=yes
+
+- name: restart docker-gc timer
+  service: name=docker-gc.timer state=restarted
