--- a/roles/gitlab-runner/tasks/main.yml
+++ b/roles/gitlab-runner/tasks/main.yml
@@ -32,6 +32,7 @@
     - docker-gc.timer
   notify:
     - daemon reload
+  notify: restart docker-gc timer
 
 - name: start and enable docker-gc timer
   service: name=docker-gc.timer enabled=yes state=started
