gitlab-runner: Reload sysctl if increase-arp-table-size.conf changed

--- a/roles/gitlab-runner/tasks/main.yml
+++ b/roles/gitlab-runner/tasks/main.yml
@@ -39,3 +39,4 @@
 
 - name: copy increase-arp-table-size.conf in place
   copy: src=increase-arp-table-size.conf dest=/etc/sysctl.d/increase-arp-table-size.conf mode=0644 owner=root group=root
+  notify: reload sysctl
