--- a/roles/gitlab-runner/handlers/main.yml
+++ b/roles/gitlab-runner/handlers/main.yml
@@ -7,3 +7,6 @@
 
 - name: restart docker-gc timer
   service: name=docker-gc.timer state=restarted
+
+- name: reload sysctl
+  command: sysctl --system --load
