gitlab-runner: install docker-containerd and ensure containerd service runs

--- a/roles/gitlab-runner/tasks/ubuntu.yml
+++ b/roles/gitlab-runner/tasks/ubuntu.yml
@@ -15,7 +15,10 @@
 
 - name: install docker
   apt:
-    name: docker.io
+    name: docker.io,docker-containerd
     state: present
     update_cache: yes
     cache_valid_time: 3600
+
+- name: start and enable containerd
+  service: name=containerd enabled=yes state=started
