--- a/roles/gitlab-runner/tasks/main.yml
+++ b/roles/gitlab-runner/tasks/main.yml
@@ -5,14 +5,11 @@
 - include_tasks: ubuntu.yml
   when: ansible_distribution == "Ubuntu"
 
-- include_tasks: fedora.yml
-  when: ansible_distribution == "Fedora"
-
-- include_tasks: fedora.yml
-  when: ansible_distribution == "CentOS"
-
 - include_tasks: debian.yml
   when: ansible_distribution == "Debian"
+
+- include_tasks: redhat.yml
+  when: ansible_os_family == "RedHat"
 
 - name: start and enable docker
   service: name=docker state=started enabled=true
