--- a/roles/gitlab-runner/tasks/redhat.yml
+++ b/roles/gitlab-runner/tasks/redhat.yml
@@ -9,6 +9,7 @@
 
 - name: install docker
   yum: name=docker state=present
+  tags: docker
 
 - name: Add gitlab-runner repository (Fedora)
   yum_repository:
