--- a/roles/gitlab-runner/tasks/ubuntu.yml
+++ b/roles/gitlab-runner/tasks/ubuntu.yml
@@ -19,6 +19,7 @@
     state: present
     update_cache: yes
     cache_valid_time: 3600
+  tags: docker
 
 - name: install containerd
   apt:
@@ -27,6 +28,8 @@
     update_cache: yes
     cache_valid_time: 3600
   when: ansible_distribution == 'Ubuntu' and ansible_distribution_release != 'xenial'
+  tags: docker
 
 - name: start and enable containerd
   service: name=containerd enabled=yes state=started
+  tags: docker
