--- a/roles/gitlab-runner/tasks/main.yml
+++ b/roles/gitlab-runner/tasks/main.yml
@@ -13,6 +13,7 @@
 
 - name: start and enable docker
   service: name=docker state=started enabled=true
+  tags: docker
 
 - name: configure gitlab-runner
   template:
