--- a/roles/gitlab-runner/handlers/main.yml
+++ b/roles/gitlab-runner/handlers/main.yml
@@ -10,3 +10,6 @@
 
 - name: reload sysctl
   command: sysctl --system --load
+
+- name: restart docker
+  service: name=docker.service state=restarted
