--- a/roles/gitlab-runner/defaults/main.yml
+++ b/roles/gitlab-runner/defaults/main.yml
@@ -8,6 +8,4 @@ gitlab_runner_concurrent: 8
 gitlab_runner_check_interval: 0
 gitlab_runner_session_timeout: 1800
 
-gitlab_runner_dockerd_config:
-    ipv6: true
-    fixed-cidr-v6: "2001:db8::/64"
+gitlab_runner_dockerd_config: {}
