--- a/roles/gitlab-runner/tasks/selinux.yml
+++ b/roles/gitlab-runner/tasks/selinux.yml
@@ -5,17 +5,21 @@
     dest: "/etc/selinux/targeted/{{ item }}.te"
     mode: 0644
   register: te
+  tags: selinux
 
 - name: check for pp file
   stat:
     path: "/etc/selinux/targeted/{{ item }}.pp"
   register: pp_check
+  tags: selinux
 
 - name: compile selinux module
   command: make -f /usr/share/selinux/devel/Makefile -C /etc/selinux/targeted/ {{ item }}.pp
   register: pp
   when: (te is changed) or (not pp_check.stat.exists)
+  tags: selinux
 
 - name: install selinux module
   command: semodule -i /etc/selinux/targeted/{{ item }}.pp
   when: pp is changed
+  tags: selinux
