--- a/roles/base_auth/tasks/main.yml
+++ b/roles/base_auth/tasks/main.yml
@@ -27,4 +27,4 @@
     regexp: "^[#]*PasswordAuthentication *"
     line: "PasswordAuthentication no"
     state: present
-  notify: restart sshd
+  notify: "Restart SSHD"
