--- a/roles/gitlab-runner/tasks/main.yml
+++ b/roles/gitlab-runner/tasks/main.yml
@@ -44,6 +44,11 @@
 - name: start and enable docker-gc timer
   service: name=docker-gc.timer enabled=yes state=started
 
-- name: copy increase-arp-table-size.conf in place
+- name: increase arp table size
   copy: src=increase-arp-table-size.conf dest=/etc/sysctl.d/increase-arp-table-size.conf mode=0644 owner=root group=root
   notify: reload sysctl
+
+- name: increase number of file descriptors
+  copy: src=increase-file-max.conf dest=/etc/sysctl.d/increase-file-max.conf mode=0644 owner=root group=root
+  notify: reload sysctl
+  tags: sysctl
