Differentiate between RHEL 8 based hypervisors and virtual machines

--- a/playbooks/ral3_rhel8_vms.yml
+++ b/playbooks/ral3_rhel8_vms.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: hypervisors
+- hosts: rhel8-vms
   gather_facts: true
   remote_user: root
   roles:
@@ -9,7 +9,6 @@
    - chrony
    - iptables
    - ipaclient.wrapper
-   - dell
    - bash
    - base_auth
    - nrpe
