--- a/roles/node-exporter/defaults/main.yml
+++ b/roles/node-exporter/defaults/main.yml
@@ -1,5 +1,6 @@
 ---
-node_exporter_version: 0.18.1
+node_exporter_version: 1.0.1
+node_exporter_checksum: sha256:3369b76cd2b0ba678b6d618deab320e565c3d93ccb5c2a0d5db51a53857768ae
 node_exporter_textfile_dir: /var/lib/node_exporter
 node_exporter_enabled_collectors: []
 node_exporter_disabled_collectors: []
