Make sure the storage cli pieces get installed

--- a/roles/dell/tasks/main.yml
+++ b/roles/dell/tasks/main.yml
@@ -42,6 +42,7 @@
     - srvadmin-deng-snmp
     - nagios-plugins-openmanage
     - srvadmin-storageservices-snmp
+    - srvadmin-storage-cli
 
 - name: Configure SNMPD
   copy:
