haproxy-int: Install and configure pgbouncer
pgpool is somewhat sensitive to number of connections to handle, and
given some services are allergic to it or have very low traffic,
it makes more sense to use pgbouncer for such cases

--- a/roles/haproxy-int/handlers/main.yml
+++ b/roles/haproxy-int/handlers/main.yml
@@ -13,3 +13,8 @@
   systemd:
     name: pgpool-II-12
     state: reloaded
+
+- name: reload pgbouncer
+  systemd:
+    name: pgbouncer
+    state: reloaded
