Add required roles for BBB

--- a/roles/requirements.yml
+++ b/roles/requirements.yml
@@ -14,3 +14,6 @@
 - name: iptables
   src: https://github.com/geerlingguy/ansible-role-firewall.git
   scm: git
+  
+- geerlingguy.nodejs
+- geerlingguy.docker
