--- a/roles/prometheus/defaults/main.yml
+++ b/roles/prometheus/defaults/main.yml
@@ -5,5 +5,6 @@ prometheus_db_dir: /var/lib/prometheus
 prometheus_config_dir: /etc/prometheus
 prometheus_node_hostgroups:
   - ral3
+  - osuosl
 prometheus_static_targets:
   - meet.gnome.org:9100
