--- a/roles/bigbluebutton/tasks/gnome.yml
+++ b/roles/bigbluebutton/tasks/gnome.yml
@@ -1,6 +1,6 @@
 ---
 # https://github.com/bigbluebutton/bigbluebutton/issues/8824
-- name: Decrease timeout for microphone echo test
+- name: decrease timeout for microphone echo test
   blockinfile:
     marker_begin: "      // Session parameters"
     marker_end: "      turnServers: [],"
@@ -15,3 +15,30 @@
     - /usr/share/meteor/bundle/programs/web.browser.legacy/app/compatibility/sip.js
     - /var/www/bigbluebutton/client/lib/sip.js
   notify: restart bigbluebutton
+
+- name: register bbb secret
+  command: bbb-conf --secret
+  changed_when: false
+  register: result
+  when: not bbb_secret is defined
+
+- name: parse bbb secret
+  set_fact:
+    bbb_secret: "{{ result.stdout | regex_search('Secret: ([a-zA-Z0-9]*)', multiline=True) |  regex_replace('Secret: ') }}"
+    cacheable: true
+  when: not bbb_secret is defined
+
+- name: start bbb_exporter
+  docker_container:
+    name: bbb_exporter
+    image: greenstatic/bigbluebutton-exporter:v0.5.0
+    state: present
+    restart_policy: unless-stopped
+    ports:
+      - "9688:9688"
+    volumes:
+      - /var/bigbluebutton:/var/bigbluebutton:ro
+    env:
+      RECORDINGS_METRICS_READ_FROM_DISK: "true"
+      API_SECRET: "{{ bbb_secret }}"
+      API_BASE_URL: https://meet.gnome.org/bigbluebutton/api/
