prometheus: Scrap Rocket.Chat exporter via HTTPS

--- a/roles/prometheus/defaults/main.yml
+++ b/roles/prometheus/defaults/main.yml
@@ -9,3 +9,5 @@ prometheus_node_hostgroups:
 prometheus_static_targets:
   - meet.gnome.org:9100
   - meet.gnome.org:9688
+prometheus_https_targets:
+  - rocketchat-exporter.openshift.gnome.org
