--- a/playbooks/ral3_dell_rhel8.yml
+++ b/playbooks/ral3_dell_rhel8.yml
@@ -3,15 +3,15 @@
   gather_facts: true
   remote_user: root
   roles:
-   # - redhat.subscription
-   # - packages
-   # - motd
-   # - chrony
-   # - iptables
-   # - ipaclient.wrapper
-   # - dell
-   # - bash
-   # - base_auth
-   # - nrpe
-   # - base_network
+   - redhat.subscription
+   - packages
+   - motd
+   - chrony
+   - iptables
+   - ipaclient.wrapper
+   - dell
+   - bash
+   - base_auth
+   - nrpe
+   - base_network
    - rsyslog
